# BigDataStorageRetrieval

./: pyproject.toml
output/: benchmark_runs.json  benchmark_summary.csv  benchmark_summary.json
scripts/: benchmark.py  clean_data.py  common.py  generate_chart.py  load_data_graph.py  load_data_graph.sh  load_data_mongodb.py  load_data_mongodb.sh  load_data_psql.py  load_data_psql.sh  q1.cypher  q1.js  q1.sql  q2.cypher  q2.js  q2.sql  q3.cypher  q3.js  q3.sql
