[project]
name = "bigdatastorageretrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "neo4j>=6.1.0",
    "pandas>=3.0.1",
    "psycopg2-binary>=2.9.11",
    "pymongo>=4.16.0",
    "ruff>=0.15.6",
]
